# sdl-demos

./: README
01-window/: CMakeLists.txt  main.c
02-discoball/: CMakeLists.txt  main.c
03-opengl/: CMakeLists.txt  main.c
04-freefall/: CMakeLists.txt  main.c
05-learnopengl-01/: CMakeLists.txt  main.c
glad/: CMakeLists.txt
glad/include/glad/: gl.h
